# ncJump

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Info.plist.in  LICENSE  README.md  azure-pipelines.yml  index.html  ncjump.data  ncjump.js  ncjump.wasm
.github/workflows/: android.yml  codeql-analysis.yml  emscripten.yml  linux.yml  macos.yml  mingw.yml  windows.yml
android/: build.gradle.in
android/src/main/: AndroidManifest.xml.in
android/src/main/cpp/: CMakeLists.txt  CMakeLists.txt.in
android/src/main/java/: LoadLibraries.java.in  LoadLibrariesTV.java.in
cmake/: Findbox2d.cmake  custom_nlohmannjson.cmake  find_ncine.cmake  package_build_android.cmake  package_check_data.cmake  package_check_info.cmake  package_generated_sources.cmake  package_get_version.cmake  package_imported_targets.cmake  package_info.cmake  package_installation.cmake  package_options.cmake  package_strip_binaries.cmake
include/: camera.h  config.h  editor.h  entity.h  game.h  input.h  main.h  physics.h  tilemap.h  tileset.h  types.h
include/command/: command.h
include/component/: graphics.h  graphics_component.h  physics.h  script.h  state.h  transform.h
include/factory/: entity_factory.h  graphics_factory.h
include/model/: defs.h
include/serialization/: config.h  defs_serialization.h  file.h  tilemap.h  tileset.h
include/system/physics/: destruction.h
src/: camera.cpp  editor.cpp  entity.cpp  game.cpp  input.cpp  main.cpp  physics.cpp  tilemap.cpp  tileset.cpp
src/command/: command.cpp
src/component/: graphics.cpp  graphics_component.cpp  physics.cpp  script.cpp  state.cpp  transform.cpp
src/factory/: entity_factory.cpp  graphics_factory.cpp
src/model/: defs.cpp
src/serialization/: config.cpp  defs_serialization.cpp  file.cpp  tilemap.cpp  tileset.cpp
src/system/physics/: destruction.cpp
